--- a/Apache-poi/pom.xml
+++ b/Apache-poi/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>s3</artifactId>
             <version>2.27.21</version>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.27.21</version>
+        </dependency>
     </dependencies>
 
 </project>
