--- a/Apache-poi/pom.xml
+++ b/Apache-poi/pom.xml
@@ -35,6 +35,7 @@
             <artifactId>s3</artifactId>
             <version>2.27.21</version>
         </dependency>
+    <dependency>
        <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>9.0.0</version>
@@ -48,7 +49,8 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
             <version>2.12.0</version>
-    </dependencies>
+        </dependency>
+        </dependencies>
 
     <build>
         <plugins>
