--- a/web-data-viz/.env.dev
+++ b/web-data-viz/.env.dev
@@ -4,7 +4,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE='APDATABD'
 DB_USER='root'
-DB_PASSWORD='basquete14'
+DB_PASSWORD='010905'
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
