--- a/APdataJava/pom.xml
+++ b/APdataJava/pom.xml
@@ -77,7 +77,13 @@
             <version>5.6.0</version>
             <scope>test</scope>
         </dependency>
-        </dependencies>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20250517</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
