--- a/APdataJava/.gitignore
+++ b/APdataJava/.gitignore
@@ -2,12 +2,12 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+/src/main/java/school/sptech/notify/Slack.java
 school/sptech/notify
 C:\Users\Victor\Documents\2° Semestre ADS\ProjetoAPdata\APdataJava\src\main\java\school\sptech\notify
 src/main/java/school/sptech/notify/Slack.java
